# 2023-Spectrum_MOT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  py_examples.cpp  py_examples.h  utils.h  utils_destruct.cpp  utils_init.cpp  utils_input.cpp
MOT/: hello_world.py
MOT/tracker/: .gitignore  deepsort.py  eval_omni_mot.py  ped_det_server.py  requirements-version-removed.txt  requirements.txt  run.sh  test.py  tracker_online.py  yolov3_deepsort_eval.py
MOT/tracker/configs/: deep_sort.yaml  yolov5.yaml
MOT/tracker/deep_sort/: __init__.py  deep_sort.py
MOT/tracker/deep_sort/deep/: feature_extractor.py  model.py  train.py
MOT/tracker/deepsort_utils/: evaluation.py  io.py  metrics.py
MOT/tracker/detector/: __init__.py
MOT/tracker/detector/YOLOv5/: .gitignore  __init__.py  detector.py  train.sh
MOT/tracker/detector/YOLOv5/runs/: res_yolo_xywh_2_xywh.py
MOT/tracker/output/: evaluation_omni_mot.py  summary_global.xlsx
